2021-08-03 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx,
	  src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCopt.c,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h,
	  src/ds390/main.c,
	  src/hc08/main.c,
	  src/mcs51/main.c,
	  src/pdk/main.c,
	  src/pic14/main.c,
	  src/pic16/main.c,
	  src/port.h,
	  src/stm8/gen.c,
	  src/stm8/main.c,
	  src/z80/gen.c,
	  src/z80/main.c:
	  Infrastructure for calling convention selection.

2021-08-01 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/gbz80/abs.s,
	  device/lib/gbz80/atomic_flag_test_and_set.s,
	  device/lib/gbz80/div.s,
	  device/lib/gbz80/mul.s,
	  device/lib/gbz80/memcpy.s,
	  device/lib/gbz80/setjmp.s,
	  device/lib/gbz80/strlen.s,
	  device/lib/_memset.c:
	  Fix library functions for new calling convention.

2021-07-31 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/gbz80/div.s,
	  doc/sdccman.lyx,
	  src/z80/gen.c,
	  support/regression/ports/ucgbz80/spec.mk,
	  support/regression/tests/abs.c:
	  New calling convention for gbz80.

2021-07-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix __smallc.

2021-07-28 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/r3ka/abs.s,
	  device/lib/r3ka/atomic_flag_test_and_set.s,
	  device/lib/r3ka/divsigned.s,
	  device/lib/r3ka/divunsigned.s,
	  device/lib/r3ka/modsigned.s,
	  device/lib/r3ka/modunsigned.s,
	  device/lib/r3ka/mulchar.s,
	  device/lib/r3ka/memmove.s,
	  device/lib/r3ka/setjmp.s,
	  device/lib/r3ka/strcpy.s,
	  device/include/string.h,
	  device/lib/r3ka/modmixed.s:
	  Fix library functions for new calling convention.

2021-07-28 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/ports/rrz80/spec.mk,
	  support/regression/ports/ucz180/spec.mk,
	  support/regression/ports/ucz80-nmos/spec.mk,
	  support/regression/ports/ucz80-resiy/spec.mk,
	  support/regression/ports/ucz80n/spec.mk:
	  Do not use --profile in regression testing, since it conflicts with register arguments.
	* device/lib/z180/mul.s,